force-app/main/default/objects/MS_Scheme__c/MS_Scheme__c.object-meta.xml
<CustomObject>
    <description>For Storing Applicable LTV and Applicable FOIR</description>
    <label>MS Scheme</label>
    <nameField>
        <displayFormat>Scheme - {000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MS Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>