force-app/main/default/objects/MS_Scheme__c/fields/Applicable_FOIR__c.field-meta.xml
<CustomField>
    <fullName>Applicable_FOIR__c</fullName>
    <label>Applicable FOIR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>