force-app/main/default/objects/MS_Scheme__c/fields/Cycle_Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Date_Type__c</fullName>
    <description>Used For Calculating Cycle Date</description>
    <label>Cycle Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOM</fullName>
            </value>
            <value>
                <fullName>Range</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>