force-app/main/default/objects/MS_Scheme__c/fields/First_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Installment_Date__c</fullName>
    <label>First Installment Date</label>
    <type>Date</type>
</CustomField>