force-app/main/default/objects/MS_Scheme__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSBL LAP Business Loan</fullName>
            </value>
            <value>
                <fullName>FSBL LAP Business Loan Top Up</fullName>
            </value>
            <value>
                <fullName>FSBL LAP Housing Loan</fullName>
            </value>
            <value>
                <fullName>FSBL LAP MORTGAGE LOAN</fullName>
            </value>
            <value>
                <fullName>FSBL LAP Mortgage Loan Top Up</fullName>
            </value>
            <value>
                <fullName>FSHL HOME CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>FSHL Home Improvement</fullName>
            </value>
            <value>
                <fullName>FSHL Home Purchase</fullName>
            </value>
            <value>
                <fullName>FSHL Home Loan Takeover</fullName>
            </value>
            <value>
                <fullName>LAP</fullName>
                <isActive>false</isActive>
                <label>LAP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>