force-app/main/default/objects/MS_Scheme__c/fields/Scheme_Code__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Code__c</fullName>
    <label>Scheme Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>