force-app/main/default/objects/MS_Scheme__c/fields/Scheme_Description__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Description__c</fullName>
    <label>Scheme Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>