force-app/main/default/objects/MS_Scheme__c/fields/Type_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Interest__c</fullName>
    <label>Type Of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>